@@ -1,0 +1,6 @@
+{
+  "parent": "minecraft:block/template_tall_seagrass",
+  "textures": {
+    "texture": "minecraft:block/tall_seagrass_top"
+  }
+}
