@@ -1,5 +1,0 @@
-{
-    "animation": {
-        "frametime": 2
-    }
-}
