@@ -1,0 +1,3 @@
+{
+    "condition": "lavidacraft.environment.moon.squareMoon"
+}
