@@ -1,7 +1,7 @@
 {
   "pack": {
-    "pack_format": 63,
-    "supported_formats": {"min_inclusive": 32, "max_inclusive": 63},
+    "pack_format": 64,
+    "supported_formats": {"min_inclusive": 32, "max_inclusive": 64},
     "description": "Various improvements to Minecraft made by Lad_FLaver."
   }
 }
